# fundrr

./: .env  .gitignore  COMPLETE.md  DEMO-DAY-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  SETUP_INSTRUCTIONS.md  TRANSACTION_HASHES.md  deploy-program.js  dummy_program.c  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
fundrr-solana/: Anchor.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json
fundrr-solana/programs/fundrr/: Cargo.toml
fundrr-solana/programs/fundrr/src/: lib.rs
fundrr-solana/tests/: fundrr.ts
public/: index.html
src/: App.jsx  index.css  main.jsx  polyfills.js
src/components/: AuthButton.jsx  CampaignCard.jsx  CustomWalletButton.jsx  Discover.jsx  Header.jsx  Layout.jsx  LiveUpdates.jsx  Sidebar.jsx  Statistics.jsx  SummaryCards.jsx  SummaryStats.jsx  TransactionHistory.jsx  Transactions.jsx
src/contexts/: ProgramContext.jsx  WalletConnectionProvider.jsx  WalletContext.jsx
src/hooks/: useAnchorProgram.js
src/idl/: fundrr.json
src/pages/: CampaignDetails.jsx  CreateCampaign.jsx  Dashboard.jsx  Discover.jsx  DiscoverCampaigns.jsx  Login.jsx  MyCampaigns.jsx  Profile.jsx  Settings.jsx
src/program/: Anchor.toml  Cargo.toml  DEPLOYMENT_ISSUE.md  (+7 more)
src/program/programs/fundrr/: Cargo.toml
src/program/programs/fundrr/src/: lib.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-2300-4FsmdQHaLjA12vgvdvycJS6TBizirsKuTWFUfbF37qBB.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
(+22 files in other folders)
